Fixed grid alignment
announcements section doesn't stretch anymore

--- a/styles.css
+++ b/styles.css
@@ -164,8 +164,8 @@ button:hover {
 .main {
     display: grid;
     grid-template-columns: 4fr minmax(223px, 1fr);
-    grid-template-rows: repeat(2, min-content);
-    padding: 2rem 1.5rem 0rem 1rem;
+    grid-template-rows: 330px minmax(250px, 1fr);
+    padding: 1.5rem 1.5rem 0rem 1rem;
     gap: 1rem 1.5rem;
     background-color: #e2e8f0;
     box-shadow: inset #d4dae1 0px 3px 5px 0;
@@ -181,8 +181,7 @@ button:hover {
 
 .projects {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(min-content, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1.5rem;
 }
 
